# minutario

./: .gitignore  AGENTS.md  CLAUDE.md  DESKTOP.md  FAZER.md  README.md  background.js  content.js  manifest.json  package-lock.json  package.json
dashboard/: dashboard.css  dashboard.html  dashboard.js  index.html  manifest.json  sw.js
dashboard/sync/: csv.js  drive.js  (+2 more)
docs/: ONBOARDING_PILOTO.md
firefox/: COMPATIBILITY.md  README.md  background.js  build.ps1  content.js  manifest.json
minutario-desktop/: .gitignore  build.ps1  package-lock.json  package.json
minutario-desktop/src-tauri/: Cargo.toml  tauri.conf.json
minutario-desktop/src-tauri/src/: lib.rs  main.rs
minutario-desktop/src-tauri/src/clipboard/: manager.rs
minutario-desktop/src-tauri/src/db/: sqlite.rs
minutario-desktop/src-tauri/src/hooks/keyboard/: input.rs  mod.rs
password-reset/: password-reset.html  password-reset.js
popup/: popup.css  popup.html  popup.js
quick-access/: quick-access.css  quick-access.html  quick-access.js
scripts/: bump-version.js  pack-chrome.ps1  pack-desktop-portable.ps1  pack-desktop.ps1  pack-firefox.ps1
shared/: api.js  auth-ui.css  config.example.js  config.js  confirmed.html  db.js  privacy.html  sync.js  terms.html  word-clipboard.js
supabase/: migration.sql  reset.sql  schema.sql
tests/: background.test.js  content.test.js  dashboard.test.js  integration.sync.test.js  manifest.test.js  popup.test.js  quick-access.test.js  shared.api.test.js  shared.db.test.js  shared.sync.test.js  sync.csv.test.js  sync.drive.test.js  sync.supabase.test.js
(+33 files in other folders)
